Introduce SIMD-powered tokenizer